# eisodos

./: Cargo.toml  README.md  eisodos_plan.md  metron_eisodon_plan.md
benchmark/: Cargo.toml
benchmark/benches/: solana_nostd_entrypoint.rs  solana_program.rs
benchmark/benches/setup/: mod.rs  runner.rs
benchmark/src/: executor_main.rs
examples/account-read-crate/: Cargo.toml  eisodos_benchmarks.toml
examples/account-read-crate/src/: lib.rs  processor.rs
examples/create-account-crate/: Cargo.toml  eisodos_benchmarks.toml
examples/create-account-crate/src/: lib.rs
examples/log-crate/: Cargo.toml  eisodos_benchmarks.toml
examples/log-crate/src/: lib.rs
examples/ping-crate/: Cargo.toml  eisodos_benchmarks.toml
examples/ping-crate/src/: lib.rs
examples/transfer-crate/: Cargo.toml  eisodos_benchmarks.toml
examples/transfer-crate/src/: lib.rs
programs/pinocchio/: Cargo.toml
programs/pinocchio/src/: entrypoint.rs  instruction.rs  processor.rs
programs/solana-nostd-entrypoint/: Cargo.toml
programs/solana-nostd-entrypoint/src/: entrypoint.rs  instruction.rs  processor.rs
programs/solana-program/: Cargo.toml
programs/solana-program/src/: entrypoint.rs  instruction.rs  processor.rs
scripts/: run_eisodos_benchmarks.py
scripts/benchmark_templates/: template.cargo.toml  template.pinocchio.cargo.toml  template.pinocchio.lib.rs  template.solana_program.cargo.toml  template.solana_program.lib.rs
