[workspace]
resolver = "2"
members = [
    "benchmark",
    "programs/jiminy",
    "programs/pinocchio",
    "programs/solana-nostd-entrypoint",
    "programs/solana-program"
]

[workspace.metadata.cli]
solana = "2.2.6"

[workspace.metadata.toolchains]
format = "1.84.1"
lint = "1.84.1"

[workspace.dependencies]
pinocchio = { version = "0.8", git = "https://github.com/rustopian/pinocchio.git", branch = "rustopian/slot-hashes-sysvar" }
solana-program = { version = "^2.2" }
solana-program-error = { version = "^2.2" }