[package]
name = "eisodos"
edition = "2021"
publish = false

[[bin]]
name = "coyote"
path = "src/main.rs"

# New binary target for executing benchmarks via script
[[bin]]
name = "eisodos-bench-executor"
path = "src/executor_main.rs"

# Dependencies needed by eisodos-bench-executor
[dependencies]
mollusk-svm = "0.1.5"
mollusk-svm-bencher = "0.1.5"
solana-sdk = "2.2" # For Pubkey, Instruction, etc. used by mollusk-svm-bencher
hex = "0.4"
# solana-program might be needed if executor constructs more complex accounts/instructions
# solana-program = "2.2"

[dev-dependencies]
eisodos-jiminy = { path="../programs/jiminy" }
eisodos-pinocchio = { path="../programs/pinocchio" }
eisodos-solana-nostd-entrypoint = { path="../programs/solana-nostd-entrypoint" }
eisodos-solana-program = { path="../programs/solana-program" }
# These were moved to [dependencies] as they are used by a [[bin]] target
# mollusk-svm = "0.1.5"
# mollusk-svm-bencher = "0.1.5"
solana-account = "2.2"
solana-instruction = "2.2"
# solana-logger = "2.2" # Moved
solana-program = "2.2" # This one can likely stay dev if only for main bench crate's tests
solana-pubkey = "2.2"
# solana-sdk = "2.2" # Moved
solana-system-interface = { version = "1.0" }
# hex = "0.4" # Moved

