[package]
name = "account-read-crate"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"] # "lib" allows it to be used as a dependency by the benchmark runner

[features]
std = ["solana-program"]
no_std = ["pinocchio"]
provide-handlers = []

[dependencies]
solana-program = { workspace = true, optional = true }
pinocchio = { workspace = true, optional = true }

# Add other common dependencies here if needed, e.g.:
# bytemuck = { version = "1.13.1", features = ["derive"] }
# borsh = { version = "0.10.3", features = ["derive"] } 