[workspace]
[package]
name = "account-read-crate"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"] # "lib" allows it to be used as a dependency by the benchmark runner

[features]
std = ["solana-account-info", "solana-entrypoint", "solana-msg", "solana-program-error", "solana-pubkey"]
no_std = ["pinocchio"]
provide-handlers = []
solana-entrypoint = ["dep:solana-entrypoint"]

[dependencies]
pinocchio = { version = "0.8", git = "https://github.com/rustopian/pinocchio.git", branch = "rustopian/slot-hashes-sysvar", optional = true }
solana-account-info = { version = "2.2.1", optional = true }
solana-entrypoint = { version = "0.0.1", optional = true }
solana-msg = { version = "2.2.1", optional = true }
solana-program-error = { version = "2.2.2", optional = true }
solana-pubkey = { version = "2.4.0", optional = true }

# Add other common dependencies here if needed, e.g.:
# bytemuck = { version = "1.13.1", features = ["derive"] }
# borsh = { version = "0.10.3", features = ["derive"] } 