[workspace]
[package]
name = "log-crate"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["no_std"]
# Make std feature match ping-crate
std = ["solana-account-info","solana-entrypoint","solana-logger","solana-pubkey","solana-program"]
no_std = ["pinocchio"]
provide-handlers = []

[dependencies]
pinocchio = { version = "0.8", git = "https://github.com/rustopian/pinocchio.git", branch = "rustopian/slot-hashes-sysvar", optional = true }
solana-account-info = { version = "2.2.1", optional = true }
solana-entrypoint = { version = "0.0.1", optional = true }
solana-logger = { version = "2.3.1", optional = true }
solana-pubkey = { version = "2.4.0", optional = true }
solana-program = { version = "2.2.1", optional = true }

[lib]
crate-type = ["cdylib", "lib"] 
