[workspace]
[package]
name = "ping-crate"
version = "0.1.0"
edition = "2021"
publish = false

# Specify lib target explicitly for clarity if needed, though Cargo usually infers it
[lib]
crate-type = ["cdylib", "lib"] # Keep existing types

[features]
std = ["solana-program", "solana-program-error"]
no_std = ["pinocchio"]
provide-handlers = []

[dependencies]
solana-program = { workspace = true, optional = true }
pinocchio = { workspace = true, optional = true }
solana-program-error = { workspace = true, optional = true }
