[workspace]
[package]
name = "ping-crate"
version = "0.1.0"
edition = "2021"
publish = false

# Specify lib target explicitly for clarity if needed, though Cargo usually infers it
[lib]
crate-type = ["cdylib", "lib"] # Keep existing types

[features]
std = ["solana-account-info", "solana-entrypoint", "solana-pubkey"]
no_std = ["pinocchio"]
default = ["no_std"]
provide-handlers = []

[dependencies]
pinocchio = { version = "0.8", git = "https://github.com/rustopian/pinocchio.git", branch = "rustopian/slot-hashes-sysvar", optional = true }
solana-account-info = { version = "2.2.1", optional = true }
solana-entrypoint = { version = "0.0.1", optional = true }
solana-pubkey = { version = "2.4.0", optional = true }
