[package]
name = "transfer-crate"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
std = ["solana-program", "solana-program-error"]
no_std = ["pinocchio"]
provide-handlers = []

[dependencies]
solana-program = { workspace = true, optional = true }
pinocchio = { workspace = true, optional = true }
solana-program-error = { workspace = true, optional = true }

[lib]
crate-type = ["cdylib", "lib"] 