[workspace]
[package]
name = "transfer-crate"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["no_std"]
std = ["solana-account-info", "solana-entrypoint", "solana-invoke", "solana-msg", "solana-program-error", "solana-pubkey", "solana-system-program"]
no_std = ["pinocchio"]
provide-handlers = []

[dependencies]
pinocchio = { version = "0.8", git = "https://github.com/rustopian/pinocchio.git", branch = "rustopian/slot-hashes-sysvar", optional = true }
solana-account-info = { version = "2.2.1", optional = true }
solana-entrypoint = { version = "0.0.1", optional = true }
solana-invoke = { version = "0.2.0", optional = true }
solana-msg = { version = "2.2.1", optional = true }
solana-program-error = { version = "2.2.2", optional = true }
solana-pubkey = { version = "2.2.1", optional = true }
solana-system-program = { version = "2.2.1", optional = true }

[lib]
crate-type = ["cdylib", "lib"] 
