[package]
name = "eisodos-pinocchio"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata.solana]
program-id = "Pinocchio1111111111111111111111111111111111"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version = "0.8", git = "https://github.com/rustopian/pinocchio.git", branch = "rustopian/slot-hashes-sysvar" }
pinocchio-pubkey = { version = "0.2", git = "https://github.com/rustopian/pinocchio.git", branch = "rustopian/slot-hashes-sysvar" }

[dev-dependencies]
solana-sdk = "1.18"
solana-program = "1.18"
